<resources>
    <string name="app_name">BuildingOpenCV</string>
    <string name="title_activity_image_train_classify">imageTrainClassify</string>
    <string name="TrainingString">Trained %1$d/%2$d</string>
    <string name="AlreadyTrained">Already Trained</string>
    <string name="train_model">Train Model</string>
    <string name="retrain_model">Retrain Model</string>
    <string name="images">Images:</string>
    <string name="number_of_selected_images">Number of Selected Images:</string>
    <string name="label">Label</string>
    <string name="Training_data">Training Data</string>
    <string name="testing_data">Testing Data</string>
    <string name="labelPrompt">Label:</string>
    <string name="test_an_image">Test an Image</string>
    <string name="select_more_images">Select More Images</string>
    <string name="run_test">Run Test</string>
    <string name="train_the_model_before_testing">Train the model before testing</string>
</resources>
