<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.hendrix.huynhem.buildingopencv.UI.ImageTrainClassify">

    <RelativeLayout
        android:id="@+id/ActionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/NumSelectedImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_selected_images" />

        <ProgressBar
            android:id="@+id/ClassificationBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ClassifyGalButton" />

        <LinearLayout
            android:id="@+id/model_setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/NumSelectedImages"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/modelSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/ClassifyGalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TrainedStatusText"
            android:enabled="false"
            android:text="@string/test_an_image" />

        <Button
            android:id="@+id/TrainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/model_setting_container"
            android:text="@string/train_model" />

        <EditText
            android:id="@+id/outputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ClassificationBar"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/AddMoreImagesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/TrainedStatusText"
            android:layout_toEndOf="@+id/TrainButton"
            android:text="@string/select_more_images" />

        <TextView
            android:id="@+id/TrainedStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TrainButton"
            android:text="@string/train_the_model_before_testing" />

        <Button
            android:id="@+id/runTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ClassificationBar"
            android:layout_toEndOf="@+id/ClassifyGalButton"
            android:enabled="false"
            android:text="@string/run_test" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Training_data"/>
        <ListView
            android:id="@+id/train_data_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testing_data" />

        <ListView
            android:id="@+id/test_data_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>



</LinearLayout>
